# minetest_pnr

./: Cargo.toml  README.md  mycells.lib
src/: canvas.rs  channel_router.rs  circuit.rs  loader.rs  main.rs  placer.rs
src/gate/: basic.rs  dff.rs  mesecons.rs  mod.rs
