[package]
name = "minetest_pnr"
version = "0.1.0"
authors = ["Kevin Hamacher <hamacher@google.com>"]
edition = "2018"

[dependencies]
bitmap = "3.1.3"
byteorder = "1"
clap = "2.33.0"
deflate = "0.7.19"
itertools = "0.8.0"
rayon = "1.0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
